# klib

./: .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: init_ubuntu_26.04.sh
.github/workflows/: ci.yml
cmake/: interfaces.cmake
install_test/: script.cmake  script.sh
install_test/exe/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/cmake_src/: build_version.hpp.in
lib/include/klib/: arg.hpp  arg_binding.hpp  arg_parse.hpp  arg_parse_info.hpp  arg_parse_result.hpp  assert.hpp  base_types.hpp  byte_cast.hpp  byte_count.hpp  c_string.hpp  compat.hpp  concepts.hpp  constants.hpp  debug.hpp  debug_trap.hpp  demangle.hpp  enum_array.hpp  enum_flags.hpp  enum_name.hpp  enum_ops.hpp  env.hpp  escape_code.hpp  file_io.hpp  fixed_any.hpp  fixed_string.hpp  flex_array.hpp  format_parser.hpp  from_chars.hpp  hash_combine.hpp  log.hpp  log_file.hpp  macros.hpp  meta.hpp  noop.hpp  polymorphic.hpp  ptr.hpp  random.hpp  scoped_defer.hpp  str_buf.hpp  str_to_num.hpp  (+15 more)
lib/include/klib/args/: app_info.hpp  arg.hpp  binding.hpp  param.hpp  parse.hpp  parse_info.hpp  parse_result.hpp  printer.hpp
lib/include/klib/cli/: prompt.hpp  shell.hpp  text_table.hpp
lib/include/klib/debug/: assert.hpp  trap.hpp
lib/include/klib/enum/: array.hpp  map.hpp  name.hpp
lib/include/klib/lerp_expr/: atomize.hpp  interpolate.hpp  scanner.hpp  token.hpp
lib/include/klib/log/: file.hpp  log.hpp  tagged.hpp  typed.hpp
lib/include/klib/string/: escape_code.hpp  fixed_string.hpp  from_chars.hpp  interpolator.hpp  lerp_expr.hpp
lib/include/klib/task/: id.hpp  queue.hpp  queue_create_info.hpp  queue_fwd.hpp  status.hpp  task.hpp  task_fwd.hpp
lib/include/klib/unit_test/: unit_test.hpp
lib/src/: arg_parser.hpp  arg_scanner.hpp  arg_token.hpp  build_version.cppm.in  build_version.hpp.in  cli.cppm  core.cppm  klib.cpp  klib.cppm  klib_test_main.cpp  lerp_expr.cppm  log.cppm  string.cppm  task.cppm  unit_test.cppm
lib/src/args/: assigner.hpp  parser.hpp  scanner.hpp  token.hpp
lib/src/detail/string/: interpolate_impl.hpp
lib/src/unit_test/: klib_test_main.cpp  unit_test.cpp
scripts/: format_code.sh
tests/: CMakeLists.txt  test_arg.cpp  test_arg_parser.cpp  test_arg_scanner.cpp  test_arg_token.cpp  test_assert.cpp  test_byte_cast.cpp  test_byte_count.cpp  test_compat.cpp  test_debug_trap.cpp  test_demangle.cpp  test_enum_array.cpp  test_enum_flags.cpp  test_enum_map.cpp  test_enum_name.cpp  test_enum_ops.cpp  test_file_io.cpp  test_fixed_any.cpp  test_fixed_string.cpp  test_flex_array.cpp  test_from_chars.cpp  test_interpolate_scanner.cpp  test_lerp_expr.cpp  test_lerp_expr_interpolate.cpp  test_lerp_expr_scanner.cpp  test_log.cpp  test_meta.cpp  test_ptr.cpp  test_queue.cpp  test_scoped_defer.cpp  test_shell.cpp  test_stacktrace.cpp  test_str_to_num.cpp  test_string_interpolator.cpp  test_task_queue.cpp  test_unique.cpp  test_version.cpp  test_vigenere_cipher.cpp  test_visitor.cpp  util.hpp
tests/args/: test_arg.cpp  test_arg_scanner.cpp  test_arg_token.cpp  test_parser.cpp  test_scanner.cpp
tests/task/: test_task_queue.cpp
tests/tmp/: test_arg.cpp
